@@ -4,6 +4,8 @@
 
 #include <sys/types.h> // for u_char
 
+#include "IntrusivePtr.h"
+
 class IP_Hdr;
 class Val;
 class Func;
@@ -20,10 +22,10 @@ public:
 protected:
 	Val* BuildData(const u_char* data, int hdrlen, int len, int caplen);
 
-	Func* check_ip;
-	Func* check_tcp;
-	Func* check_udp;
-	Func* check_icmp;
+	IntrusivePtr<Func> check_ip;
+	IntrusivePtr<Func> check_tcp;
+	IntrusivePtr<Func> check_udp;
+	IntrusivePtr<Func> check_icmp;
 
 	// Maximum amount of application data passed to filtering functions.
 	int discarder_maxlen;
